# truthsocial-marketimpact

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  VOORTGANG.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
data/processed/: gdelt_news_timing.parquet  intraday_spy_iran_1min.parquet  intraday_spy_tariff_1min.parquet  intraday_xle_iran_1min.parquet  intraday_xle_tariff_1min.parquet  nb14_event_ar.parquet
data/raw/: market.parquet  posts_live.parquet
notebooks/: 01_data_collection.ipynb  02_eda.ipynb  03_alignment_returns.ipynb  04_features.ipynb  05_modeling_rf.ipynb  06_interpretability.ipynb  07_sentiment_exploration.ipynb  08_sentiment_classifier.ipynb  09_toxicity_classifier.ipynb  10_iran_oil_event_study.ipynb  11_tariffs_liberation_day_event_study.ipynb  12_intraday_event_study.ipynb  13_gdelt_news_timing.ipynb  14_individual_stocks_event_study.ipynb
notebooks/.virtual_documents/: 02_eda.ipynb
reports/: notebook_gids.docx  rapport_eenvoudig.md  rapport_normaal.md
reports/figures/: top_features_ar_1d_spx.csv  top_features_ar_1d_wti.csv
reports/scriptie/: scriptie.md  scriptie_full.md
scripts/: fetch_gdelt_news_timing.py  fetch_intraday_twelvedata.py  init_repo.sh
src/: __init__.py  config.py
src/data/: collect_market.py  collect_truthsocial.py  preprocess.py  scrape_trumpstruth_rss.py
src/evaluation/: bootstrap.py  interpretability.py  metrics.py
src/features/: abnormal_returns.py  company_mentions.py  sentiment.py  tfidf.py
tests/: test_models.py  test_preprocess.py
