[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthsocial-marketimpact"
version = "0.1.0"
description = "Predictive modeling of Trump's Truth Social posts vs. S&P 500 and WTI oil abnormal returns."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Quinten Friederichs", email = "quinten@rivnox.ai" }
]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "yfinance>=0.2.40",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "shap>=0.45",
    "statsmodels>=0.14",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "nltk>=3.8",
    "joblib>=1.3",
    "fredapi>=0.5.1",
    "click>=8.1",
]

[project.optional-dependencies]
nlp = [
    "transformers>=4.40",
    "torch>=2.2",
]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.6",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
